adding project model
