# docs/swagger.yaml
@@ -1,5 +1,43 @@
 basePath: /
 definitions:
+  handlers.ProjectDetailView:
+    properties:
+      category:
+        $ref: '#/definitions/models.Category'
+        type: object
+      description:
+        type: string
+      event_date:
+        type: string
+      goal_amount:
+        type: integer
+      goal_people:
+        type: integer
+      id:
+        type: integer
+      image_link:
+        type: string
+      instructions:
+        type: string
+      owner:
+        $ref: '#/definitions/models.User'
+        type: object
+      percent:
+        type: integer
+      project_type:
+        $ref: '#/definitions/models.ProjectType'
+        type: object
+      release_date:
+        type: string
+      status:
+        type: string
+      subtitle:
+        type: string
+      title:
+        type: string
+      total:
+        type: integer
+    type: object
   handlers.TokenRequest:
     properties:
       code:
@@ -9,6 +47,36 @@ definitions:
     properties:
       token:
         type: string
+    type: object
+  handlers.extendedUser:
+    properties:
+      avatar:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: integer
+      is_staff:
+        type: boolean
+      last_name:
+        type: string
+      participation:
+        items:
+          $ref: '#/definitions/handlers.participation'
+        type: array
+      project_count:
+        type: integer
+      success_rate:
+        type: number
+      username:
+        type: string
+    type: object
+  handlers.participation:
+    properties:
+      count:
+        type: integer
+      id:
+        type: integer
     type: object
   models.Category:
     properties:
@@ -34,7 +102,9 @@ definitions:
       name:
         type: string
       options:
-        type: string
+        items:
+          type: string
+        type: array
     type: object
   models.User:
     properties:
@@ -44,8 +114,6 @@ definitions:
         type: string
       id:
         type: integer
-      is_admin:
-        type: boolean
       last_name:
         type: string
       project_count:
@@ -78,6 +146,8 @@ paths:
       security:
       - Bearer: []
       summary: Returns list of categories
+      tags:
+      - category
   /login:
     post:
       consumes:
@@ -99,9 +169,33 @@ paths:
           schema:
             $ref: '#/definitions/handlers.TokenResponse'
       summary: Returns access token
+      tags:
+      - auth
+  /project/{id}:
+    get:
+      description: Returns project by ID
+      operationId: get-project-by-id
+      parameters:
+      - description: Project ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.ProjectDetailView'
+      security:
+      - Bearer: []
+      summary: Show a single project
+      tags:
+      - project
   /project_type:
     get:
-      description: Returns list of categories
+      description: Returns list of project types
       operationId: get-project-types
       produces:
       - application/json
@@ -113,6 +207,8 @@ paths:
       security:
       - Bearer: []
       summary: return list of project types
+      tags:
+      - project type
   /user:
     get:
       description: Returns user by ID from token
@@ -123,10 +219,12 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/handlers.extendedUser'
       security:
       - Bearer: []
       summary: Show a current user
+      tags:
+      - user
   /user/{id}:
     get:
       description: Returns user by ID
@@ -143,10 +241,12 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/handlers.extendedUser'
       security:
       - Bearer: []
       summary: Show a specific user
+      tags:
+      - user
 securityDefinitions:
   Bearer:
     in: header
